--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,12 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  intl: ^0.17.0
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^1.0.0
 
 flutter:
