--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   intl: ^0.17.0
+  flutter_local_notifications: ^9.1.3
+  sqflite: ^2.0.1
+  path:
   
 
 dev_dependencies:
